--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,13 @@ archivesBaseName = 'DoubleJumpInterviewTest'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
+fancyGradle {
+    patches {
+        resources
+    }
+}
+
+
 minecraft {
     mappings channel: 'snapshot', version: '20171003-1.12'
 
